--- a/write/assets/scss/app.scss
+++ b/write/assets/scss/app.scss
@@ -8,7 +8,7 @@
 @import "bootstrap/scss/bootstrap";
 
 /** Import highlight.js */
-// @import "highlight.js/scss/dracula";
+@import "highlight.js/scss/dracula";
 
 /** Import KaTeX */
 @import "katex/dist/katex";
@@ -17,8 +17,8 @@
 @import "common/fonts";
 @import "common/global";
 @import "common/dark";
-@import "components/doks";
-// @import "components/syntax";
+// @import "components/doks";
+@import "components/syntax";
 @import "components/code";
 @import "components/alerts";
 @import "components/buttons";
