--- a/write/assets/scss/common/_fonts.scss
+++ b/write/assets/scss/common/_fonts.scss
@@ -69,3 +69,15 @@
     url("fonts/vendor/jost/jost-v4-latin-700italic.woff2") format("woff2"),
     url("fonts/vendor/jost/jost-v4-latin-700italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+
+
+/* jost-regular - latin */
+@font-face {
+  font-family: "Source Sans Pro";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src:
+    local("Source Sans Pro"),
+    url("fonts/vendor/Source_Sans_Pro/SourceSansPro-Regular.ttf") format("ttf")
+}
