--- a/write/layouts/partials/head/resource-hints.html
+++ b/write/layouts/partials/head/resource-hints.html
@@ -1,5 +1,8 @@
 <link rel="preload" as="font" href="{{ "fonts/vendor/jost/jost-v4-latin-regular.woff2" | relURL }}" type="font/woff2" crossorigin>
 <link rel="preload" as="font" href="{{ "fonts/vendor/jost/jost-v4-latin-700.woff2" | relURL }}" type="font/woff2" crossorigin>
+
+<link rel="preload" as="font" href="{{ "fonts/vendor/Source_Sans_Pro/SourceSansPro-Regular.ttf" | relURL }}" type="font/ttf" crossorigin>
+
 {{ if .Site.Params.options.kaTex -}}
   <link rel="preload" as="font" href="{{ "fonts/KaTeX_Main-Regular.woff2" | relURL }}" type="font/woff2" crossorigin>
   <link rel="preload" as="font" href="{{ "fonts/KaTeX_Math-Italic.woff2" | relURL }}" type="font/woff2" crossorigin>
