[main] Font, landing page MVP

--- a/write/layouts/partials/head/resource-hints.html
+++ b/write/layouts/partials/head/resource-hints.html
@@ -1,7 +1,10 @@
-<link rel="preload" as="font" href="{{ "fonts/vendor/jost/jost-v4-latin-regular.woff2" | relURL }}" type="font/woff2" crossorigin>
-<link rel="preload" as="font" href="{{ "fonts/vendor/jost/jost-v4-latin-700.woff2" | relURL }}" type="font/woff2" crossorigin>
+<!-- <link rel="preload" as="font" href="{{ "fonts/vendor/jost/jost-v4-latin-regular.woff2" | relURL }}" type="font/woff2" crossorigin>
+<link rel="preload" as="font" href="{{ "fonts/vendor/jost/jost-v4-latin-700.woff2" | relURL }}" type="font/woff2" crossorigin> -->
 
-<link rel="preload" as="font" href="{{ "fonts/vendor/Source_Sans_Pro/SourceSansPro-Regular.ttf" | relURL }}" type="font/ttf" crossorigin>
+<link rel="preload" as="font" href="{{ "fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-regular.woff2" | relURL }}" type="font/woff2" crossorigin>
+<link rel="preload" as="font" href="{{ "fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-700.woff2" | relURL }}" type="font/woff2" crossorigin>
+<link rel="preload" as="font" href="{{ "fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-regular.woff2" | relURL }}" type="font/woff2" crossorigin>
+<link rel="preload" as="font" href="{{ "fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-600.woff2" | relURL }}" type="font/woff2" crossorigin>
 
 {{ if .Site.Params.options.kaTex -}}
   <link rel="preload" as="font" href="{{ "fonts/KaTeX_Main-Regular.woff2" | relURL }}" type="font/woff2" crossorigin>
