--- a/write/layouts/partials/header/header.html
+++ b/write/layouts/partials/header/header.html
@@ -1,4 +1,4 @@
-<div class="header-bar fixed-top"></div>
+<!-- <div class="header-bar fixed-top"></div> -->
 <header class="navbar fixed-top navbar-expand-md navbar-light">
   <div class="container">
     <input class="menu-btn order-0" type="checkbox" id="menu-btn">
@@ -34,7 +34,7 @@
       <div class="break order-6 d-md-none"></div>
       {{ if .Site.Params.options.flexSearch -}}
       <form class="navbar-form flex-grow-1 order-7 order-md-3">
-        <input id="userinput" class="form-control is-search" type="search" placeholder="Search docs..." aria-label="Search docs..." autocomplete="off">
+        <input id="userinput" class="form-control is-search" type="search" placeholder="Search posts..." aria-label="Search posts..." autocomplete="off">
         <div id="suggestions" class="shadow bg-white rounded"></div>
       </form>
       {{ end -}}
