--- a/write/assets/scss/common/_fonts.scss
+++ b/write/assets/scss/common/_fonts.scss
@@ -1,83 +1,181 @@
-/* jost-regular - latin */
+// /* jost-regular - latin */
+// @font-face {
+//   font-family: "Jost";
+//   font-style: normal;
+//   font-weight: 400;
+//   font-display: swap;
+//   src:
+//     local("Jost"),
+//     url("fonts/vendor/jost/jost-v4-latin-regular.woff2") format("woff2"),
+//     url("fonts/vendor/jost/jost-v4-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+// }
+
+// /* jost-500 - latin */
+// @font-face {
+//   font-family: "Jost";
+//   font-style: normal;
+//   font-weight: 500;
+//   font-display: swap;
+//   src:
+//     local("Jost"),
+//     url("fonts/vendor/jost/jost-v4-latin-500.woff2") format("woff2"),
+//     url("fonts/vendor/jost/jost-v4-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+// }
+
+// /* jost-700 - latin */
+// @font-face {
+//   font-family: "Jost";
+//   font-style: normal;
+//   font-weight: 700;
+//   font-display: swap;
+//   src:
+//     local("Jost"),
+//     url("fonts/vendor/jost/jost-v4-latin-700.woff2") format("woff2"),
+//     url("fonts/vendor/jost/jost-v4-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+// }
+
+// /* jost-italic - latin */
+// @font-face {
+//   font-family: "Jost";
+//   font-style: italic;
+//   font-weight: 400;
+//   font-display: swap;
+//   src:
+//     local("Jost"),
+//     url("fonts/vendor/jost/jost-v4-latin-italic.woff2") format("woff2"),
+//     url("fonts/vendor/jost/jost-v4-latin-italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+// }
+
+// /* jost-500italic - latin */
+// @font-face {
+//   font-family: "Jost";
+//   font-style: italic;
+//   font-weight: 500;
+//   font-display: swap;
+//   src:
+//     local("Jost"),
+//     url("fonts/vendor/jost/jost-v4-latin-500italic.woff2") format("woff2"),
+//     url("fonts/vendor/jost/jost-v4-latin-500italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+// }
+
+// /* jost-700italic - latin */
+// @font-face {
+//   font-family: "Jost";
+//   font-style: italic;
+//   font-weight: 700;
+//   font-display: swap;
+//   src:
+//     local("Jost"),
+//     url("fonts/vendor/jost/jost-v4-latin-700italic.woff2") format("woff2"),
+//     url("fonts/vendor/jost/jost-v4-latin-700italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+// }
+
+/* source-sans-pro-regular - vietnamese_latin */
 @font-face {
-  font-family: "Jost";
+  font-family: 'Source Sans Pro';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-  src:
-    local("Jost"),
-    url("fonts/vendor/jost/jost-v4-latin-regular.woff2") format("woff2"),
-    url("fonts/vendor/jost/jost-v4-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: local(''),
+       url('fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
-/* jost-500 - latin */
+/* source-sans-pro-italic - vietnamese_latin */
 @font-face {
-  font-family: "Jost";
+  font-family: 'Source Sans Pro';
+  font-style: italic;
+  font-weight: 400;
+  src: local(''),
+       url('fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* source-sans-pro-600 - vietnamese_latin */
+@font-face {
+  font-family: 'Source Sans Pro';
   font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src:
-    local("Jost"),
-    url("fonts/vendor/jost/jost-v4-latin-500.woff2") format("woff2"),
-    url("fonts/vendor/jost/jost-v4-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  font-weight: 600;
+  src: local(''),
+       url('fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
-/* jost-700 - latin */
+/* source-sans-pro-600italic - vietnamese_latin */
 @font-face {
-  font-family: "Jost";
+  font-family: 'Source Sans Pro';
+  font-style: italic;
+  font-weight: 600;
+  src: local(''),
+       url('fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-600italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-600italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* source-sans-pro-700 - vietnamese_latin */
+@font-face {
+  font-family: 'Source Sans Pro';
   font-style: normal;
   font-weight: 700;
-  font-display: swap;
-  src:
-    local("Jost"),
-    url("fonts/vendor/jost/jost-v4-latin-700.woff2") format("woff2"),
-    url("fonts/vendor/jost/jost-v4-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: local(''),
+       url('fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-
-/* jost-italic - latin */
+/* source-sans-pro-700italic - vietnamese_latin */
 @font-face {
-  font-family: "Jost";
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-  src:
-    local("Jost"),
-    url("fonts/vendor/jost/jost-v4-latin-italic.woff2") format("woff2"),
-    url("fonts/vendor/jost/jost-v4-latin-italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* jost-500italic - latin */
-@font-face {
-  font-family: "Jost";
-  font-style: italic;
-  font-weight: 500;
-  font-display: swap;
-  src:
-    local("Jost"),
-    url("fonts/vendor/jost/jost-v4-latin-500italic.woff2") format("woff2"),
-    url("fonts/vendor/jost/jost-v4-latin-500italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* jost-700italic - latin */
-@font-face {
-  font-family: "Jost";
+  font-family: 'Source Sans Pro';
   font-style: italic;
   font-weight: 700;
-  font-display: swap;
-  src:
-    local("Jost"),
-    url("fonts/vendor/jost/jost-v4-latin-700italic.woff2") format("woff2"),
-    url("fonts/vendor/jost/jost-v4-latin-700italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: local(''),
+       url('fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/vendor/source-sans-pro/source-sans-pro-v14-vietnamese_latin-700italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
-
-/* jost-regular - latin */
+/* source-serif-pro-regular - vietnamese_latin */
 @font-face {
-  font-family: "Source Sans Pro";
+  font-family: 'Source Serif Pro';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-  src:
-    local("Source Sans Pro"),
-    url("fonts/vendor/Source_Sans_Pro/SourceSansPro-Regular.ttf") format("ttf")
+  src: local(''),
+       url('fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* source-serif-pro-italic - vietnamese_latin */
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: italic;
+  font-weight: 400;
+  src: local(''),
+       url('fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* source-serif-pro-600italic - vietnamese_latin */
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: italic;
+  font-weight: 600;
+  src: local(''),
+       url('fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-600italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-600italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* source-serif-pro-600 - vietnamese_latin */
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: normal;
+  font-weight: 600;
+  src: local(''),
+       url('fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* source-serif-pro-700 - vietnamese_latin */
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: normal;
+  font-weight: 700;
+  src: local(''),
+       url('fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* source-serif-pro-700italic - vietnamese_latin */
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: italic;
+  font-weight: 700;
+  src: local(''),
+       url('fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('fonts/vendor/source-serif-pro/source-serif-pro-v11-vietnamese_latin-700italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
