--- a/write/assets/scss/common/_global.scss
+++ b/write/assets/scss/common/_global.scss
@@ -22,6 +22,15 @@ h6,
 .h5,
 .h6 {
   margin: 2rem 0 1rem;
+  font-family: 'Source Serif Pro', serif;
+}
+
+h1, h2, h3, .h1, .h2, .h3 {
+  font-weight: 600;
+}
+
+h4, h5, h6, .h4, .h5, .h6 {
+  font-weight: 400;
 }
 
 @include media-breakpoint-up(md) {
