--- a/write/layouts/blog/list.html
+++ b/write/layouts/blog/list.html
@@ -3,6 +3,7 @@
   <div class="col-md-12 col-lg-10 col-xl-8">
     <article>
       <h1 class="text-center">{{ .Title }}</h1>
+	  <div class="text-center">RSS: https://lnquy.com/blog/index.xml</div>
       <div class="text-center">{{ .Content }}</div>
 			<div class="card-list">
 				{{ range .Data.Pages -}}
