--- a/write/layouts/blog/single.html
+++ b/write/layouts/blog/single.html
@@ -6,7 +6,7 @@
         <h1>{{ .Title }}</h1>
         {{ partial "main/blog-meta.html" . }}
       </div>
-      <p class="lead">{{ .Params.lead | safeHTML }}</p>
+      <p class="lead">{{ .Params.Description | safeHTML }}</p>
       {{ .Content }}
     </article>
   </div>
