--- a/write/layouts/blog/single.html
+++ b/write/layouts/blog/single.html
@@ -1,5 +1,11 @@
 {{ define "main" }}
 <div class="row justify-content-center">
+  {{ if ne .Params.toc false -}}
+		<nav class="docs-toc d-none d-xl-block col-xl-3" aria-label="Secondary navigation">
+			{{ partial "sidebar/docs-toc.html" . }}
+		</nav>
+  {{ end -}}
+    
   <div class="col-md-12 col-lg-11 col-xl-10">
     <article>
       <div class="blog-header">
