[main] Minor styling

--- a/write/assets/scss/common/_variables.scss
+++ b/write/assets/scss/common/_variables.scss
@@ -113,7 +113,7 @@ $font-size-sm:                $font-size-base * 0.875;
 
 $line-height-base:            1.5;
 
-$headings-font-family:        null;
+$headings-font-family:        'Source Serif Pro';
 $headings-font-weight:        700;
 
 $lead-font-weight:            400;
