--- a/write/assets/scss/components/_search.scss
+++ b/write/assets/scss/components/_search.scss
@@ -43,7 +43,7 @@
 }
 
 #suggestions span:first-child {
-  font-weight: $headings-font-weight;
+  font-weight: 600; //$headings-font-weight;
   color: $black;
 }
 
