--- a/write/assets/scss/common/_global.scss
+++ b/write/assets/scss/common/_global.scss
@@ -22,7 +22,7 @@ h6,
 .h5,
 .h6 {
   margin: 2rem 0 1rem;
-  font-family: 'Source Serif Pro', serif;
+  font-family: $headings-font-family, serif;
 }
 
 h1, h2, h3, .h1, .h2, .h3 {
@@ -114,7 +114,7 @@ a.btn:focus {
       position: -webkit-sticky;
       position: sticky;
       top: 4rem;
-      z-index: 1000;
+      z-index: 99;
       height: calc(100vh - 4rem);
     }
   }
