[main] Article styling

--- a/write/assets/scss/app.scss
+++ b/write/assets/scss/app.scss
@@ -27,6 +27,7 @@
 @import "components/images";
 @import "components/search";
 @import "components/tables";
+@import "components/article";
 @import "layouts/footer";
 @import "layouts/header";
 @import "layouts/pages";
