[main] Update posts

--- a/write/layouts/index.html
+++ b/write/layouts/index.html
@@ -7,7 +7,7 @@
     <div class="col-lg-9 col-xl-8 text-center">
       <!-- <p class="lead">{{ .Params.lead | safeHTML }}</p> -->
       <p class="lead">
-        Welcome to my personal blog, where I rant about things I had faced and learned in daily life.<br>There will be both good and bullsh*t posts.<br>You have been warned.
+        Welcome to my personal blog, where I write about things I had faced and learned in daily life.<br>Mostly it'll be about software development stuffs for now.
       </p>
       <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ "/blog" | relURL }}" role="button">Get started</a>
       <!-- <p class="meta">Open-source MIT Licensed. <a href="https://github.com/h-enk/doks">GitHub v{{ .Site.Data.doks.version }}</a></p> -->
